Reverted main source to be JDK11 compatible  - Downgraded enhanced switch statements  - Replaced records with classes  - Removed pattern matching in instanceof expressions  - Added BackPort classes to provide missing functionality  - Updated tests to work with JDK11
 Also:
  - Fixed the ByString comparator (was comparing textual
    representation of the Candidate, not the member/clazz)
  - JDK-specific test files